syntax = "proto3";
package raftpb;

option go_package = "kv/pkg/raftpb";

message LogEntry {
  int32 index = 1;
  int32 term = 2;
  bytes command = 3;
}

message PersistentState {
  int32 current_term = 1;
  int32 vote_for = 2;
  repeated LogEntry logs = 3;
}